Add onclick handler to Go button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </html>
       `
       document.body.appendChild(frame);
-    }
+    }    
   </script>
   <body>
-    <button>Go</button>
+    <button onclick="go()">Go</button>
   </body>
 </html>
