--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8" />
   </head>
   <script type="text/javascript">
+    <!--
     const go = () => {
       const frame = document.createElement("iframe");
-      frame.srcdoc = `
-        <html>
-          <head><script src="https://localhost:9876/test.mjs" type="module"></script></head>
-        </html>
-      `
+      frame.srcdoc = '<html><head><script src="https://localhost:9876/test.mjs" type="module"></script></head></html>'
       document.body.appendChild(frame);
-    }    
+    }
+    -->
   </script>
   <body>
     <button onclick="go()">Go</button>
